support core update of Drupal 7

--- a/drush-scm.ini
+++ b/drush-scm.ini
@@ -2,4 +2,7 @@
 DrushCommand = drush
 # example for docker-compose
 # DrushCommand = docker-compose exec -T php drush
+# Owner = USER
+# Group = GROUP
+ExcludeFiles = .gitignore, .htaccess, composer.json
 
