--- a/drush-scm.ini
+++ b/drush-scm.ini
@@ -2,7 +2,7 @@
 DrushCommand = drush
 # example for docker-compose
 # DrushCommand = docker-compose exec -T php drush
-# Owner = USER
-# Group = GROUP
+Owner =
+Group =
 ExcludeFiles = .gitignore, .htaccess, composer.json
 
