exclude composer.lock

--- a/drush-scm.ini
+++ b/drush-scm.ini
@@ -4,5 +4,5 @@ DrushCommand = drush
 # DrushCommand = docker-compose exec -T php drush
 Owner =
 Group =
-ExcludeFiles = .gitignore, .htaccess, composer.json
+ExcludeFiles = .gitignore, .htaccess, composer.json, composer.lock
 
